# neuro-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MODULE.yaml  README.md
ci/: sample-github-actions.yml
ci/github-actions/: build-and-test.yml
ci/gitlab-ci/: .gitlab-ci.yml
debugging/: README.md
debugging/ebpf_tracing/: trace_syscalls.py
debugging/gdb_scripts/: kernel_debug.py
debugging/profilers/: profile.sh
docs/design/: DESIGN.md
scripts/: boot-direct.sh  build-complete-iso.sh  build-final-iso.sh  build-grub-iso.sh  build-image.sh  build-offline-iso.sh  build-production-iso.sh  build-simple-iso.sh  build-test-iso.sh  build-working-iso.sh  clone-all.sh  create-initramfs.sh  create-iso.sh  cross-repo-test.sh  deploy-service.sh  final-visual-test.sh  health-check.sh  neuro-sync  qemu-launch-macos.sh  quick-iso.sh  run-qemu.sh  test-all.sh  test-boot-alt.sh  test-boot.sh  test-direct-boot.sh  test-grub-boot.sh  test-grub-serial.sh  test-iso.sh  update-system.sh
test-scripts/: benchmark-advanced.sh  benchmark-precise.sh  benchmark.sh  run-tests.sh  test-all.sh  test-capabilities.sh  test-containers.sh  test-memory.sh
testing/: README.md  property_tests.rs  test-qemu.sh
testing/fuzzing/: Cargo.toml  lib.rs
testing/integration/: tests.rs
